--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>All developers</title>
   </head>
-  <body></body>
+  <body>
+    <% allDevelopers.map(developer =>{ %>
+    <div>
+      <%= developer.name %> from <%= developer.based_in %>
+      <a href="/<%= developer.name %>">View <%= developer.name %> games</a>
+    </div>
+    <% }) %>
+  </body>
 </html>
