--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
           type="password"
           id="password-<%= developer.name%>"
           name="password"
+          required
         />
         <input type="hidden" value="<%= developer.name %>" name="developer" />
         <button type="submit">Delete developer</button>
